--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -121,7 +121,7 @@
           </section>
           <aside class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
             <!-- Filter Form -->
-            <app-filter-form [inputType]="'events'"></app-filter-form>
+            <app-filter-form [inputType]="'seeEvents'"></app-filter-form>
           </aside>
         </div>
       </div>
