--- a/src/app/pages/authentication/authentication.component.css
+++ b/src/app/pages/authentication/authentication.component.css
@@ -3,6 +3,10 @@ body {
   height: 100%;
   background: #f5f6fa;
 }
+.custom-control{
+  display: inline;
+  margin-right: 0.5rem;
+}
 
 .ks-page {
   width: 100%;
