--- a/src/app/pages/authentication/register/register.component.html
+++ b/src/app/pages/authentication/register/register.component.html
@@ -83,11 +83,18 @@
                         </div>
                         <span *ngIf="aboutYourself.errors?.maxlength && aboutYourself.dirty " class="help-block form-error" translate>{{'validation.about-yourself-length'}}</span>
                     </div>
+                    <!-- Privacy policy -->
+                      <div class="form-group" [ngClass]="{'has-error': !privacyPolicy.value, 'has-success': privacyPolicy.value}">
+                        <label  class="custom-control custom-checkbox">
+                          <input type="checkbox" (change)="changePrivacyPolicy($event)" class="custom-control-input">
+                          <span class="custom-control-indicator"></span>
+                        </label>
+                        <span (click)="staticModalShow()" class="custom-control-description" [innerHTML]="'auth-form.privacy-policy' | translate"></span>
+                        <!-- Validation -->
+                        <span *ngIf="privacyPolicy.value===false" class="help-block form-error" translate>{{'validation.required'}}</span>
+                      </div>
                     <div class="form-group">
                         <button [disabled]="!form.valid||submitted || !emailValid || !usernameValid" type="submit" class="btn btn-primary btn-block" translate>{{'auth-form.sign-up'}}</button>
-                    </div>
-                    <div class="ks-text-center">
-                        <span class="text-muted">By clicking "Sign Up" I agree the </span> <a href="pages-signup.html">Terms Of Service</a>
                     </div>
                     <div class="ks-text-center">
                         <a [routerLink]="['/sign-in-route'] | localize" translate>{{'auth-form.sign-up-sign-in-link'}}</a>
@@ -97,4 +104,3 @@
         </div>
     </div>
 </div>  
-    
