--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,11 +1,5 @@
-.post-img {
-  float: left;
-  margin: 5px 20px 15px 0px;
-  width: 100%;
-  height: auto;
-}
-
 .post-image {
+  display: none;
   float: left;
   margin: 5px 20px 15px 0px;
   width: auto;
@@ -13,7 +7,8 @@
 }
 
 .event-title {
-  margin-left: 20px;
+  /*margin-left: 20px;*/
+  color:#ffffff;
 }
 
 .event-datetime {
@@ -82,6 +77,8 @@
   font-size: 20pt;
   padding: 4px 4px 4px 4px;
   border-radius: 50%;
+  color:#ffffff;
+  display: inline-block;
   /*
   margin-left: 30px;
   border-left: solid 1px #79bcf4;
@@ -321,7 +318,6 @@
   text-shadow: 2px 2px #fe9124;
 }
 
-@media (min-width: 450px) {
   .description {
     display: -moz-box;
     display: -webkit-box;
@@ -337,14 +333,18 @@
     overflow: hidden;
     text-overflow: ellipsis;
   }
+@media (min-width: 600px) {
   .right {
     float: right;
   }
 
-  .post-img {
+  .post-image {
+    display: initial;
     float: left;
     margin: 5px 20px 15px 0px;
-    width: 300px;
-    height: 225px;
   }
+}
+
+.dropdown-toggle::after {
+    content: "";
 }
