--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -12,13 +12,14 @@
                 <div *ngIf="event.price!=0" class="ribbon ribbon-top-left">
                   <span>{{event.price}} €</span>
                 </div>
-                <h5 class="card-header">
+                <div class="card-header">
                   <!--Title-->
-                  <span class="ks-text">
-                    <span class="ks-text event-title"> {{event | translateLanguage:'title':localizeService.parser.currentLang}} </span>
-                    <span class="ks-text" ><i [routerLink]="['/event-route','see-route',event._id] | localize" class="la la-chevron-circle-right ks-icon view-event"></i></span>
-                  </span>
-                    <div class="dropdown">
+                  <div >
+                    <h2 class="ks-text event-title"> {{event | translateLanguage:'title':localizeService.parser.currentLang}} </h2>
+                  </div>
+                  <div class="col-sm-3 col-xs-4">
+                    <span class="ks-text" ><i [routerLink]="['/event-route','see-route',event._id] | localize" class="la la-chevron-circle-right ks-icon view-event col-sm-4 col-xs-4"></i></span>
+                    <div class="dropdown col-sm-8 col-xs-8">
                       <a class="translate-event dropdown-toggle" data-toggle="dropdown" href="javascript:void(0);" role="button" aria-haspopup="true" aria-expanded="false">
                         <i class="la la-language" [ngClass]="event | translateCount"></i>
                       </a>
@@ -33,7 +34,8 @@
                         </div>
                       </div>
                     </div>
-                  <div class="ks-controls">
+                  </div>
+                  <div class="ks-controls col-sm-2 col-xs-2">
                     <!-- showCollapse-->
                     <a *ngIf="!event.showCollapse" (click)="event.showCollapse = !event.showCollapse" class="ks-control">
                       <span class="ks-icon la la-minus"></span>
@@ -45,7 +47,7 @@
                       <span class="ks-icon la la-close"></span>
                     </a>
                   </div>
-                </h5>
+                </div>
                 <div *ngIf="!event.showCollapse" class="card-block">
                   <!-- Date/Time -->
                   <div class="event-datetime">
