--- a/src/app/templates/navbar/navbar.component.html
+++ b/src/app/templates/navbar/navbar.component.html
@@ -51,7 +51,7 @@
         <!-- BEGIN NAVBAR LANGUAGES -->
         <div class="nav-item dropdown ks-languages">
           <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="javascript:void(0);" role="button" aria-haspopup="true" aria-expanded="false">
-            {{language}} <span class="ks-text">Languages</span>
+            {{language}} <span class="ks-text" translate>{{'navbar.language'}}</span>
           </a>
           <div class="dropdown-menu dropdown-menu-right ks-scrollable" aria-labelledby="Preview">
             <div class="ks-wrapper">
@@ -80,7 +80,7 @@
             </ng-container>
 
             </span>
-            <span class="ks-text">Messages</span>
+            <span class="ks-text" translate>{{'navbar.notifications'}}</span>
           </a>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="Preview">
             <div class="tab-content">
