Navbar, event edition, user profile.

--- a/src/app/pages/event/manage-events/edit-event/edit-event.component.html
+++ b/src/app/pages/event/manage-events/edit-event/edit-event.component.html
@@ -6,7 +6,7 @@
           <section class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <div class="card panel ks-widget ks-widget-post">
               <h5 class="card-header">
-              <span class="ks-text" translate>{{'navbar.user'}}</span>
+              <span class="ks-text" translate>{{'event.editing-event'}}</span>
             </h5>
             <!--
               <div class="card-block">
@@ -17,21 +17,21 @@
                       <a class="nav-link nav-eu" href="#" data-toggle="tab" data-target="#tab1" translate>
                         <span *ngIf="event | hasBeenTranslatedPipe:'eu'" class="ks-icon la la-language well-translation"></span>
                         <span *ngIf="!(event | hasBeenTranslatedPipe:'eu')" class="ks-icon la la-language needed-translation"></span>
-                        {{'navbar.eu'}}
+                        {{'navbar.eu-short'}}
                       </a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link nav-es" href="#" data-toggle="tab" data-target="#tab2" translate>
                         <span *ngIf="event | hasBeenTranslatedPipe:'es'" class="ks-icon la la-language well-translation"></span>
                         <span *ngIf="!(event | hasBeenTranslatedPipe:'es')" class="ks-icon la la-language needed-translation"></span>
-                        {{'navbar.es'}}
+                        {{'navbar.es-short'}}
                       </a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link nav-en" href="#" data-toggle="tab" data-target="#tab3" translate>
                         <span *ngIf="event | hasBeenTranslatedPipe:'en'" class="ks-icon la la-language well-translation"></span>
                         <span *ngIf="!(event | hasBeenTranslatedPipe:'en')" class="ks-icon la la-language needed-translation"></span>
-                        {{'navbar.en'}}
+                        {{'navbar.en-short'}}
                       </a>
                     </li>
                   </ul>
