--- a/src/app/pages/user/profile/profile.component.html
+++ b/src/app/pages/user/profile/profile.component.html
@@ -6,34 +6,36 @@
     <input (change)="fileChangeListener($event)" id="photos" class="form-control" type="file" ng2FileSelect [uploader]="uploader" />
   </button>
 </div>
-<img-cropper #profileCropper [image]="data" [settings]="profileCropperSettings"></img-cropper>
-<br>
-<span class="result rounded"></span>
-<img *ngIf="data.image" [src]="data.image" [width]="profileCropperSettings.croppedWidth" [height]="profileCropperSettings.croppedHeight">
-<label for="progressbar" translate>{{'event-form.queue-progress'}}</label>
-<div class="card panel ks-widget-attachments">
-  <div class="ks-uploading-progress-block">
-    <span *ngIf="uploader.queue.length" class="ks-filename">{{uploader.queue[0].file.name}}</span>
-    <div class="ks-progress ks-progress-inline">
-      <div class="progress ks-progress-sm">
-        <div class="progress-bar progress-bar-striped bg-info" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" [ngStyle]="{ 'width': uploader.progress + '%' }"></div>
-      </div>
-      <span class="ks-amount">{{uploader.progress +'%'}}</span>
+<img-cropper class="col-sm-6" #profileCropper [image]="data" [settings]="profileCropperSettings"></img-cropper>
+<div class="col-sm-6">
+  <img *ngIf="data.image" [src]="data.image" [width]="profileCropperSettings.croppedWidth" [height]="profileCropperSettings.croppedHeight">
+</div>
+<label class="col-sm-12" for="progressbar" translate>{{'event-form.queue-progress'}}</label>
+<!--<div class="card panel ks-widget-attachments">-->
+<div class="ks-uploading-progress-block  col-sm-12">
+  <span *ngIf="uploader.queue.length" class="ks-filename">{{uploader.queue[0].file.name}}</span>
+  <div class="ks-progress ks-progress-inline">
+    <div class="progress ks-progress-sm">
+      <div class="progress-bar progress-bar-striped bg-info" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" [ngStyle]="{ 'width': uploader.progress + '%' }"></div>
     </div>
+    <span class="ks-amount cropper-class">{{uploader.progress +'%'}}</span>
   </div>
 </div>
-<button [disabled]="submitted" type="button" class="btn btn-success btn-s" (click)="uploadBase64()" [disabled]="!uploader.getNotUploadedItems().length" translate>
-  <span class="glyphicon glyphicon-upload"></span> {{'auth-form.upload-image'}}
-</button>
-<h5 class="ks-header" translate>{{'auth-form.my-images'}}</h5>
-<div class="ks-files">
-  <ul>
-    <li *ngFor="let avatar of avatars; let i=index" class="ks-file">
-      <img (click)="selectedAvatar = i;" [ngClass]="{'img-thumbnail':selectedAvatar===i}" class="ks-thumb" src="{{avatar}}">
-      <a (click)="deleteAvatar(i)" class="ks-icon la la-trash"></a>
-    </li>
-  </ul>
+<!--</div>-->
+<div class="col-sm-12">
+  <button [disabled]="submitted" type="button" class="btn btn-success btn-s" (click)="uploadBase64()" [disabled]="!uploader.getNotUploadedItems().length" translate>
+    <span class="glyphicon glyphicon-upload"></span> {{'auth-form.upload-image'}}
+  </button>
+  <h5 class="ks-header" translate>{{'auth-form.my-images'}}</h5>
+  <div class="ks-files">
+    <ul>
+      <li *ngFor="let avatar of avatars; let i=index" class="ks-file">
+        <img (click)="selectedAvatar = i;" [ngClass]="{'img-thumbnail':selectedAvatar===i}" class="ks-thumb" src="{{avatar}}">
+        <a (click)="deleteAvatar(i)" class="ks-icon la la-trash"></a>
+      </li>
+    </ul>
+  </div>
+  <button *ngIf="selectedAvatar!==false" type="button" class="btn btn-success btn-s" (click)="chooseImage(selectedAvatar)" translate>
+    <span class="glyphicon glyphicon-upload"></span> {{'auth-form.choose-image'}}
+  </button>
 </div>
-<button *ngIf="selectedAvatar!==false" type="button" class="btn btn-success btn-s" (click)="chooseImage(selectedAvatar)" translate>
-  <span class="glyphicon glyphicon-upload"></span> {{'auth-form.choose-image'}}
-</button>
