--- a/src/app/pages/map/events/events.component.css
+++ b/src/app/pages/map/events/events.component.css
@@ -3,5 +3,57 @@ agm-map {
   height: 80vh;
 }
 
+#iw-container .iw-content {
+  padding: 0 0 0 0;
+  margin: 0;
+  max-height: 60vh;
+}
+
+#iw-container {
+  margin: 0;
+  height: 60vh;
+}
+
+.info-img {
+  width: fill-available;
+  height: auto;
+  margin: 45px 0 20px 0;
+}
 
 
+
+#iw-container .iw-title {
+  position: absolute;
+  background-color: #2289ee;
+  width: 100%;
+}
+
+.iw-description {
+  margin: 20px 20px 20px 20px;
+  text-align: justify;
+}
+
+.si-close-button {
+  position: absolute;
+  top: -12px;
+  right: -12px;
+  border: 5px solid #2289ee;
+  border-radius: 50%;
+  -webkit-box-shadow: rgb(57, 144, 185) 0px 0px 5px;
+  box-shadow: rgb(57, 144, 185) 0px 0px 5px;
+  outline: none;
+  background-color: #FFF;
+  color: inherit;
+  font-size: 14px;
+  cursor: pointer;
+  opacity: 1;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+.datetime {
+  display: block;
+  font-size: 10pt;
+  font-style: oblique;
+}
